nambah css untuk navbar, tapi belom bisa

--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
     <title>How I Met HTML & CSS</title>
 </head>
 <body>
-    <div>
-        <h1 class="anonimous-pro-bold">How I Met HTML & CSS</h1>
+    <div class="header">
+    <div id="judul">
+        <h1 class="anonymous-pro-bold">How I Met HTML & CSS</h1>
     </div>
-    <div>
+    <div class="navbar">
         <ul>
-            <li><a href="#">HTML</a></li>
-            <li><a href="#">CSS</a></li>
+            <li id="html-link"><a href="#">HTML</a></li>
+            <li id="css-link"><a href="#">CSS</a></li>
         </ul>
     </div>
-    <div class="big-container">
+    </div>
+    <div class="hero">
         <div class="container">
             <div class="left-container">
                 <div class="html-container">
