penambahan fungsi css pada navbar & hero

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Glegoo:wght@400;700&display=swap" rel="stylesheet">
     <title>How I Met HTML & CSS</title>
 </head>
 <body>
@@ -16,8 +17,8 @@
     </div>
     <div class="navbar">
         <ul>
-            <li id="html-link"><a href="#">HTML</a></li>
-            <li id="css-link"><a href="#">CSS</a></li>
+            <li id="html-link" class="navbar-button"><a href="#">HTML</a></li>
+            <li id="css-link" class="navbar-button"><a href="#">CSS</a></li>
         </ul>
     </div>
     </div>
@@ -56,13 +57,14 @@
                 </div>
             </div>
         </div>
-        <div class="copyright">
-            <p>Copyright M Fajar Saputra with 0 Order in Fiverr</p>
-        </div>
-        <div class="closing">
-            <p>Btw, I Met HTML & CSS in Tutorial Hell, thats's all</p>
-        </div>
     </div>
-
+<div class="footer">
+    <div class="copyright">
+        <p>Copyright M Fajar Saputra with 0 Order in Fiverr</p>
+    </div>
+    <div class="closing">
+        <p>Btw, I Met HTML & CSS in Tutorial Hell, thats's all</p>
+    </div>
+</div>
 </body>
 </html>
