test push dari mac

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     <div id="css-image-container">
                         <img src="/assets/css.png" class="css-image" alt="css">
                     </div>
+                    <p>test push</p>
                     <div class="text" id="css-text">
                         <p>CSS is a board game for two players. It is sometimes called international chess or Western chess to distinguish it from related games such as xiangqi and shogi. Chess is an abstract strategy game that involves no hidden information and no elements of chance. So, basicly I agree with dead Einstain for the css stands for.</p>
                     </div>
