--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                     <div id="css-image-container">
                         <img src="/assets/css.png" class="css-image" alt="css">
                     </div>
-                    <p>test push</p>
-                    <div class="text" id="css-text">
+                    <div class="text" id="text-css">
                         <p>CSS is a board game for two players. It is sometimes called international chess or Western chess to distinguish it from related games such as xiangqi and shogi. Chess is an abstract strategy game that involves no hidden information and no elements of chance. So, basicly I agree with dead Einstain for the css stands for.</p>
                     </div>
                 </div>
@@ -51,9 +50,6 @@
                 <div class="text-right-container">
                     <div class="text-right">
                         <p>HTML & CSS huh? I don't know what is that. Can you please explain to me what is it. I know, I am the best scientist and the smartest man has ever life. But, Im dead. I can't learn no more. Please explain to me WTF is HTML and what is CSS things, is that stands for chess? <br><br>- Dead Einstain -</p>
-                    </div>
-                    <div class="einstain">
-                        <img src="/assets/einstain.png" alt="einstain">
                     </div>
                 </div>
             </div>
